--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,6 @@ NEXT_PUBLIC_SUPABASE_URL=
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
 SUPABASE_SERVICE_ROLE_KEY=
 OPENAI_API_KEY=
-N8N_NO_ANSWER_WEBHOOK_URL=http://localhost:5678/webhook/noansweremail
-N8N_MEETING_BOOKED_WEBHOOK_URL=http://localhost:5678/webhook/meetingbooked
 STRIPE_SECRET_KEY=
 CALENDLY_API_TOKEN=
+RESEND_API_KEY=
